--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="container bg-primary">
+<div class="container">
   <h1>this is {{ title }}</h1>
+  <input type="text" pInputText [(ngModel)]="title" />
+  <p-calendar [(ngModel)]="date1" class="ui-calendar"></p-calendar> {{date1|date}}
 </div>
